// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CharacterCard opens DetailsModal when "Details" button is clicked 1`] = `
<DocumentFragment>
  <div>
    <div>
      Test Character
    </div>
    <div>
      test/path.jpg
    </div>
    <div>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium css-1c8yy18-MuiButtonBase-root-MuiButton-root"
        tabindex="0"
        type="button"
      >
        Details
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
      <div>
        <div>
          DetailsMock
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CharacterCard renders CharacterCard correctly 1`] = `
<DocumentFragment>
  <div>
    <div>
      Test Character
    </div>
    <div>
      test/path.jpg
    </div>
    <div>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium css-1c8yy18-MuiButtonBase-root-MuiButton-root"
        tabindex="0"
        type="button"
      >
        Details
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
      <div />
    </div>
  </div>
</DocumentFragment>
`;
